# fellow_demo

./: CMakeLists.txt  README.md  sdkconfig
main/: CMakeLists.txt  main.c  thermostat.c
main/cli_cmds/: cli_cmds.c  cli_cmds.h
main/heater/: heater.c  heater.h
